# mp4mp3

./: .gitignore  Reunião - GT Portaria CJF n. 36_2025 - equalização força trabalho-20250311_155542-Gravação de Reunião.mp4:Zone.Identifier  TRF3 - Reunião  para destinação de cargos TRs-20250218_113519-Gravação de Reunião.mp4:Zone.Identifier  TRF4.mp4:Zone.Identifier  main.py  pyproject.toml
